# openapi.yaml
@@ -853,6 +853,76 @@ paths:
                     {"closest_address":{"street":{"name":{"sv":"Postgatan","fi":"Postikatu"}},"distance":24.09049143,"number":"1","number_end":"","letter":"","location":{"type":"Point","coordinates":[24.938211081496277,60.17112410090096]}},"contract_zone":{"id":1,"name":"Hoito
                     1:
                     Keskusta","active":true,"unavailable_dates":["2020-04-21","2020-04-22","2020-04-23","2020-04-24","2020-04-25","2020-04-26","2020-04-27","2020-04-28"]}}
+  /v1/address_search:
+    get:
+      summary: Search for an address
+      description: This endpoint uses Digitransit API address search under the hood.
+      parameters:
+        - name: text
+          in: query
+          description: The text to search for.
+          required: true
+          schema:
+            type: string
+            example: 'Lumikintie'
+        - name: language
+          in: query
+          description: The language to use for the search.
+          required: false
+          schema:
+            type: string
+            enum: [ 'fi', 'sv', 'en' ]
+            default: 'fi'
+            example: 'en'
+      responses:
+        '200':
+          description: Successful operation. The response is a GeoJSON object.
+          content:
+            application/json:
+              schema:
+                type: object
+                format: 'geojson'
+                properties:
+                  type:
+                    type: string
+                  features:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        type:
+                          type: string
+                        geometry:
+                          type: object
+                          properties:
+                            type:
+                              type: string
+                            coordinates:
+                              type: array
+                              items:
+                                type: number
+                        properties:
+                          type: object
+                          properties:
+                            name:
+                              type: string
+              examples:
+                addressSearchExample:
+                  value:
+                    type: "FeatureCollection"
+                    features:
+                      - type: "Feature"
+                        geometry:
+                          type: "Point"
+                          coordinates: [25.057749, 60.202563]
+                        properties:
+                          name: "Lumikintie 4"
+                      - type: "Feature"
+                        geometry:
+                          type: "Point"
+                          coordinates: [25.054729, 60.204275]
+                        properties:
+                          name: "Lumikintie 5"
   /v1/user/{uuid}/:
     get:
       operationId: retrieveUser
